# AI_dev

./: .flake8  .gitignore  README.md  TASKS.md  ai_dev_research_2026.html  config.yaml.example  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
backend/: README.md  __init__.py  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/rag/: chunker.py  document_loader.py  embeddings.py
backend/app/routers/: chat.py  history.py  models.py  rag.py  stats.py
backend/app/schemas/: __init__.py  chat.py  history.py  models.py  rag.py  stats.py
backend/app/services/: llm_service.py  rag_service.py  session_service.py  stats_service.py
backend/tests/: test_api_endpoints.py  test_document_loader.py  test_embedding_service.py  test_history_router.py  test_llm_service.py  test_rag_components.py  test_rag_router.py  test_rag_service.py  test_session_service.py  test_stats_router.py  test_stats_service.py
data/chroma/: chroma.sqlite3
docs/: API_SETUP.md  LOCAL_MODEL_SETUP.md  SETUP.md
frontend/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: theme-toggle.tsx
frontend/components/chat/: chat-panel.tsx  message-input.tsx  message-list.tsx
frontend/components/history/: history-panel.tsx  session-list.tsx  session-search.tsx
frontend/components/layout/: dashboard-layout.tsx
frontend/components/sidebar/: document-list.tsx  model-selector.tsx  rag-toggle.tsx  sidebar.tsx
frontend/components/stats/: stat-cards.tsx  stats-panel.tsx  timeline-graph.tsx  usage-chart.tsx
frontend/components/ui/: dialog.tsx  scroll-area.tsx  select.tsx  toast.tsx  toaster.tsx  toggle.tsx  use-toast.ts
frontend/lib/: api.ts  sse.ts
frontend/types/: index.ts
llm_chat_app/: README.md  __init__.py  exceptions.py  main.py  models.py
llm_chat_app/clients/: __init__.py  api_client.py  base.py  local_client.py
llm_chat_app/core/: __init__.py  history.py  orchestrator.py  stream.py
llm_chat_app/infrastructure/: __init__.py  config.py  logger.py
llm_chat_app/ui/: __init__.py  cli.py
tests/: test_config.py  test_exceptions.py  test_history.py  test_local_client.py  test_logger.py  test_main.py  test_models.py  test_orchestrator.py  test_stream.py
tests/property_tests/: __init__.py  test_properties_config.py  test_properties_history.py  test_properties_stream.py
