[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-chat-app"
version = "0.1.0"
description = "LLM API入門ポートフォリオプロジェクト - 商用APIとローカルモデルの2つのアプローチによるチャットアプリケーション"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Author"}
]
keywords = ["llm", "chatbot", "openai", "anthropic", "gemini", "llama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
    "llama-cpp-python>=0.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.92.0",
    "mypy>=1.7.0",
    "black>=23.12.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
]

[project.scripts]
llm-chat = "llm_chat_app.main:main"

[tool.setuptools.packages.find]
include = ["llm_chat_app*"]

# === black設定 ===
[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

# === isort設定 ===
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# === mypy設定 ===
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "llama_cpp.*",
    "google.generativeai.*",
    "ollama.*",
]
ignore_missing_imports = true

# === pytest設定 ===
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# === flake8設定（pyproject.tomlでは限定的、.flake8ファイルを参照） ===
# 注意: flake8はpyproject.tomlをネイティブサポートしないため、
# 実際の設定は .flake8 ファイルに記述しています。
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv", ".hypothesis"]
